@@ -1,3 +1,7 @@
+2019-10-23  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	dump-parse-tree.c (show_expr): Add dumping of BT_BOZ constants.
+
 2019-10-22  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/92174
